--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ tracing-subscriber = "0.3"
 [dependencies.eframe]
 version = "0.21"
 default-features = false
-features = ["accesskit", "dark-light", "default_fonts", "glow"]
+features = ["default_fonts", "glow"]
