--- a/crates/pi/Cargo.toml
+++ b/crates/pi/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-query = { path = "../query" }
+ingest = { path = "../ingest" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
