--- a/crates/pi/Cargo.toml
+++ b/crates/pi/Cargo.toml
@@ -11,6 +11,6 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 
 [dependencies.eframe]
-version = "0.21"
+version = "0.22"
 default-features = false
-features = ["default_fonts", "glow"]
+features = ["default_fonts", "glow", "wayland"]
