--- a/crates/pi/Cargo.toml
+++ b/crates/pi/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4", features = ["derive"] }
 ingest = { path = "../ingest" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
