--- a/crates/procinfo/Cargo.toml
+++ b/crates/procinfo/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "ingest"
+name = "procinfo"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-procinfo = { path = "../procinfo" }
-sysinfo = { path = "../sysinfo" }
+tracing = "0.1"
 util = { path = "../util" }
