--- a/crates/sysinfo/Cargo.toml
+++ b/crates/sysinfo/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "ingest"
+name = "sysinfo"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-procinfo = { path = "../procinfo" }
-sysinfo = { path = "../sysinfo" }
+nix = "0.26"
+tracing = "0.1"
 util = { path = "../util" }
