--- a/crates/util/Cargo.toml
+++ b/crates/util/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "ingest"
+name = "util"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-procinfo = { path = "../procinfo" }
-sysinfo = { path = "../sysinfo" }
-util = { path = "../util" }
