--- a/crates/procinfo/Cargo.toml
+++ b/crates/procinfo/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 either = "1"
-nix = { version = "0.27", features = ["uio"] }
+nix = { version = "0.27", features = ["uio","resource"] }
 tracing = "0.1"
 util = { path = "../util" }
