--- a/crates/sysinfo/Cargo.toml
+++ b/crates/sysinfo/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nix = "0.26"
+nix = { version = "0.27", features = ["uio", "resource", "fs"] }
 tracing = "0.1"
 util = { path = "../util" }
