--- a/crates/pi/Cargo.toml
+++ b/crates/pi/Cargo.toml
@@ -13,8 +13,9 @@ sysinfo = { path = "../sysinfo" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 util = { path = "../util" }
+egui_plot = "0.25"
 
 [dependencies.eframe]
-version = "0.22"
+version = "0.25"
 default-features = false
 features = ["default_fonts", "glow", "wayland"]
