--- a/crates/procinfo/Cargo.toml
+++ b/crates/procinfo/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-either = "1"
-nix = { version = "0.27", features = ["uio","resource"] }
-tracing = "0.1"
-util = { path = "../util" }
+either.workspace = true
+nix.workspace = true
+tracing.workspace = true
+util.workspace = true
