--- a/crates/ingest/Cargo.toml
+++ b/crates/ingest/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-egui = "0.25"
-procinfo = { path = "../procinfo" }
-sysinfo = { path = "../sysinfo" }
-tracing = "0.1"
-util = { path = "../util" }
+egui.workspace = true
+procinfo.workspace = true
+sysinfo.workspace = true
+tracing.workspace = true
+util.workspace = true
